# autopkg-g

./: Cargo.toml  README.md  autopkg.yml
.devcontainer/: devcontainer.json  devcontainer.zshrc  shell-setup.sh
.github/: copilot-instructions.md
config/: default_config.yml
src/: config.rs  main.rs  types.rs
src/fetcher/: github.rs  mod.rs
src/installer/: deb.rs  mod.rs
systemd/: autopkg.service  autopkg.timer
