[package]
name = "autopkg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "blocking"] }
glob = "0.3"
regex = "1"
thiserror = "1"
which = "6"

[profile.release]
lto = true
codegen-units = 1